# PulsePhysiology

./: CMakeLists.txt  CustomApplication.cmake  PulsePhysiologyConfig.cmake.in  README.md  initPulsePhysiology.cpp
CMake/: SuperBuild.cmake
config/: PulsePhysiology.cpp  PulsePhysiology.h
src/PulsePhysiology/: AirwayObstruction.cpp  AnesthesiaMachine.cpp  Asthma.cpp  BolusDrug.cpp  BrainInjury.cpp  COPD.cpp  CPR.cpp  EngineUse.cpp  EngineUse.h  LobarPneumonia.cpp  PulmonaryFunctionTest.cpp  PulseWidget.cpp  PulseWidget.h  Smoke.cpp  TensionPneumothorax.cpp  main.cpp
src/PulsePhysiology/qml/: PulseWidget.qrc  PulseWidget_qrc.qrc
src/PulsePhysiology/qml/SofaWidgets/: PulseWidget (copy 1).qml  PulseWidget.qml
